# Hyper-connect

./: .eslintignore  .gitignore  .npmrc  CHANGELOG.md  CODE_SIGNING_SETUP.md  README.md  TESTING.md  biome.json  cliff.toml  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  next.config.mjs  nodemon.json  package-lock.json  package.json  release-please-config.json  release.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.agent/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy-docs.yml  release-please.yml
.husky/: commit-msg  pre-commit
content/docs/: index.mdx  (+1 more)
docs/: .gitignore  CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  biome.json  index.html  next.config.mjs  package-lock.json  package.json  script.js  source.config.ts  styles.css  tailwind.config.ts
src/: App.css  main.tsx  mdx-components.tsx  routes.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery.rs  file_transfer.rs  lib.rs  main.rs  messaging.rs  protocol.rs  tcp_client.rs  tcp_server.rs
src-tauri/src/crypto/: handshake.rs  message_crypto.rs  mod.rs  session.rs  stream_crypto.rs
src-tauri/src/discovery/: mdns.rs  mod.rs
src-tauri/src/identity/: manager.rs  mod.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/messaging/: mod.rs  service.rs
src-tauri/src/network/: client.rs  file_transfer.rs  mod.rs  protocol.rs  secure_channel.rs  server.rs
(+279 files in other folders)
