[package]
name = "hyper-connect"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyper_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
base64 = "0.22"
validator = { version = "0.18", features = ["derive"] }
if-addrs = "0.13"
socket2 = "0.5"

# Cryptography dependencies
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
aes-gcm = "0.10"
ctr = "0.9"
aes = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-updater = "2"
